# morning-brief-agent

./: .gitignore  INSTALL.md  README.md  app.py  brief_workflow.py  config.json  package-lock.json  pyproject.toml  stock_agent.py  stock_config.json  weather_report.txt
